--- a/app/views/errors/UnauthorisedNonAgent.scala.html
+++ b/app/views/errors/UnauthorisedNonAgent.scala.html
@@ -23,11 +23,7 @@
 
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@mainTemplate(pageTitle = messages("unauthorised_non_agent.title")) {
-
-    @hmrcUserResearchBanner(UserResearchBanner(
-        url = "https://www.gov.uk/government/organisations/hm-revenue-customs"
-    ))
+@mainTemplate(pageTitle = messages("unauthorised_non_agent.title"), urBanner = Some(UserResearchBanner(url = appConfig.urBannerUrl))) {
 
     <h1 class="govuk-heading-l">@messages("unauthorised_non_agent.heading")</h1>
 
