[DL-17660] fix banner show/hide button functionality

--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -84,7 +84,7 @@
     serviceName = Some(titleServiceName),
     serviceUrl = serviceUrl.generateUrl,
     signOutUrl = if(showSignOut) Some(routes.SignOutController.signOut(feedbackOnSignOut).url) else None,
-    userResearchBanner = urBanner,
+    additionalBannersBlock = urBanner.map(hmrcUserResearchBanner(_)),
     displayHmrcBanner = false
   )
 }
