--- a/app/views/errors/UnauthorisedAgent.scala.html
+++ b/app/views/errors/UnauthorisedAgent.scala.html
@@ -14,13 +14,16 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.hmrcfrontend.views.html.components._
 @import views.html.MainTemplate
 
-@this(mainTemplate: MainTemplate, govukButton: GovukButton)
+@this(mainTemplate: MainTemplate,
+      hmrcUserResearchBanner : HmrcUserResearchBanner,
+      govukButton: GovukButton)
 
 @()(implicit request: Request[_], messages: Messages, appConfig: config.AppConfig)
 
-@mainTemplate(pageTitle = messages("unauthorised_agent.title")) {
+@mainTemplate(pageTitle = messages("unauthorised_agent.title"), urBanner = Some(UserResearchBanner(url = appConfig.urBannerUrl))) {
 
     <h1 class="govuk-heading-l">@messages("unauthorised_agent.title")</h1>
 
