--- a/app/views/returnFrequency/ChooseDates.scala.html
+++ b/app/views/returnFrequency/ChooseDates.scala.html
@@ -14,6 +14,7 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.hmrcfrontend.views.html.components._
 @import models.returnFrequency.ReturnDatesModel
 @import models.returnFrequency._
 @import models.auth.User
@@ -61,7 +62,9 @@
   pageTitle =
     if(form.errors.nonEmpty) messages("common.error.prefixTitle", messages("return_frequency.title"))
     else messages("return_frequency.title"),
-  user = Some(user)) {
+  user = Some(user),
+    urBanner = Some(UserResearchBanner(url = appConfig.urBannerUrl))
+) {
 
   @if(form.hasErrors) {
     @govukErrorSummary(ErrorSummary(
