--- a/app/views/templates/ErrorTemplate.scala.html
+++ b/app/views/templates/ErrorTemplate.scala.html
@@ -14,13 +14,15 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.hmrcfrontend.views.html.components._
 @import config.AppConfig
 
-@this(mainTemplate: MainTemplate)
+@this(mainTemplate: MainTemplate, hmrcUserResearchBanner : HmrcUserResearchBanner)
 
 @(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
-@mainTemplate(pageTitle = messages(pageTitle)) {
+@mainTemplate(pageTitle = messages(pageTitle), urBanner = Some(UserResearchBanner(url = appConfig.urBannerUrl))) {
+
  <h1 class="govuk-heading-xl">@messages(heading)</h1>
  <p class="govuk-body">@messages(message)</p>
 }
