--- a/app/views/templates/ErrorTemplate.scala.html
+++ b/app/views/templates/ErrorTemplate.scala.html
@@ -21,7 +21,7 @@
 
 @(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
-@mainTemplate(pageTitle = messages(pageTitle), urBanner = Some(UserResearchBanner(url = appConfig.urBannerUrl))) {
+@mainTemplate(pageTitle = messages(pageTitle), urBanner = Some(UserResearchBanner(url = appConfig.urBannerUrl, language = if(messages.lang.code == "en") En else Cy))) {
 
  <h1 class="govuk-heading-xl">@messages(heading)</h1>
  <p class="govuk-body">@messages(message)</p>
