--- a/app/views/MainTemplate.scala.html
+++ b/app/views/MainTemplate.scala.html
@@ -84,7 +84,7 @@
     serviceName = Some(titleServiceName),
     serviceUrl = serviceUrl.generateUrl,
     signOutUrl = if(showSignOut) Some(routes.SignOutController.signOut(feedbackOnSignOut).url) else None,
-    additionalBannersBlock = urBanner.map(hmrcUserResearchBanner(_)),
+    additionalBannersBlock = if(appConfig.features.showUserResearchBanner()) urBanner.map(hmrcUserResearchBanner(_)) else None,
     displayHmrcBanner = false
   )
 }
